content/en/docs/2025.3/getting-started/on-premise/add-observability-to-innovation/Grafana/install-loki/configure-loki.md
---
title: "Configure Loki"
linkTitle: "Configure Loki"
description: "Information about configuring Grafana Loki on the Web Application Server."
weight: 20
---

# {{% param title %}}

This guide describes how to configure Grafana Loki on the Web Application Server.

{{% alert type="note" title="Note" %}}For security reasons, Grafana Loki should be run behind an encrypted and authenticated reverse proxy as it does not provide these features by itself.{{% /alert %}}

## Install Certificate

IIS requires the X.509 SSL certificate, obtained in the [prerequisites][], to be installed on the Web Application Server.

You can import the certificate by right clicking the certificate file, selecting `Install Certificate` and following the wizard. When prompted, ensure you import it into the `Local Machine` store and not `Current User`.

To verify the certificate is imported:

1. Click the Windows button (`Start`)
2. Type `certlm.msc` and press `Enter` to open the Certificate Manager dialog
3. Expand `Personal` and select `Certificates`
4. You should see your certificate in this store

## Setup Reverse Proxy with IIS

All of the steps must be carried out on the Web Application Server.

### Install IIS URL Rewrite Module

1. Download the [URL Rewrite module 2.1][]
1. Run the downloaded installer.
1. When prompted by the Web Platform Installer, click *Install*.
1. On the *Prerequisites* page click *I Accept* to agree to the license terms for the module.
1. Once the install has completed, click *Finish*.
1. Click *Exit* to close the Web Platform Installer.

### Install Application Request Routing

1. Download [Application Request Routing 3.0][]
1. Run the downloaded installer.
1. When prompted by the Web Platform Installer, click *Install*.
1. On the *Prerequisites* page click *I Accept* to agree to the license terms for the module.
1. Once the install has completed, click *Finish*.
1. Click *Exit* to close the Web Platform Installer.

### Set Up Reverse Proxy

To set up a reverse proxy, carry out the following configuration.

#### Add a New Website

1. Run IIS Manager.
1. In the *Connection* pane, expand the server.
1. Right-click on *Sites* and select *Add Website...* from the menu.
1. In the *Add Website* window:
    - Provide the site name, e.g. `Grafana Loki`.
    - Set the *Physical path* to the location where the site will be stored and ensure that the path exists, e.g. `C:\inetpub\wwwroot\Grafana Loki`.
    - For *Binding* set:
        - *Type*: `https`
        - *IP address*: `All unassigned`
        - *Port*: `2100`
    - *Host name*: The fully qualified domain name of the Web Application Server. This must match one of the Subject Alternative Names in the SSL certificate selected in the next step.
    - *SSL certificate*: Select the certificate created as part of the [Certificate Requirements][prerequisites] instructions.
    - Click *OK* to add the website.

#### Configure URL Rewrite Rules

##### Configure Authentication for the Reverse Proxy

1. In the *Connection* pane, browse to *Sites*.
1. Select the newly created website.
1. Double-click on the *URL Rewrite* icon.
1. In the *Actions* pane, click *Add Rule(s)...*.
1. Select *Blank rule* from the *Inbound Rules* section.
1. Click *OK*.
1. In the *Edit Inbound Rule* Dialog:
    * Enter a *Name* for the rule, e.g. *Bearer Authentication*.
    * Configure the *Match URL* section:
        * *Requested URL* should be set to `Matches the Pattern`.
        * *Using* should be set to `Regular Expressions`.
        * *Pattern* should be set to `.*`.
        * *Ignore case* should be checked.
    * In the *Conditions* section:
        * *Logical Grouping* should be set to `Match Any`.
        * Click `Add...` to add a new condition.
        * In the *Edit Condition* dialog:
            * *Condition Input* should be set to `{HTTP_AUTHORIZATION}`.
            * *Check if input string:* should be set to `Does Not Match the Pattern`.
            * *Pattern* should be set to `^Bearer <Bearer Token>$` replacing &lt;Bearer Token&gt; with an appropriate value. 

                A valid Bearer Token can be generated by any token generator, e.g. [Token Generator][], and should be a minimum of 64 characters consisting of uppercase and lowercase letters as well as numbers but should not contain any symbols. This token value should be saved for use when [installing Grafana Alloy][].
            * *Ignore case* should be unchecked.
            * Click `OK`.
    * In the *Action* section:
        * *Action Type* should be set to `Custom Response`.
        * *Action Properties* should be configured as follows:
            * *Status code* should be set to `401`.
            * *Reason* should be set to `Unauthorised`.
            * *Error description* should be set to `Invalid Bearer Token`.
1. In the *Actions* pane, click *Apply*.

##### Configure the Routing for the Reverse Proxy

1. In the *Connection* pane, browse to *Sites*.
1. Select the newly created website.
1. Double-click on the *URL Rewrite* icon.
1. In the *Actions* pane, click *Add Rule(s)...*.
1. Select *Reverse Proxy* from the *Inbound and Outbound Rules* section.
1. Click *OK*.
1. If prompted to *Add Reverse Proxy Rules*, click *OK* to enable proxy functionality.
1. In the *Inbound Rules* section enter `localhost:3100` as the server name.
1. Ensure that *Enable SSL Offloading* is checked.
1. Click *OK*.

##### Ensure Correct Ordering of URL Rewrite Rules

The URL Rewrite rules should be in the following order:

1. Bearer Authentication
2. ReverseProxyInboundRule

If the order is incorrect:

1. Select the *Bearer Authentication* rule.
1. In the *Actions* pane, click *Move Up*.
1. If prompted that inheritance will be affected, click *Yes*.

##### Restart the Website

1. In the *Connection* pane, browse to *Sites*.
1. Select the newly created website.
1. In the *Manage Website* pane, click *Restart*.

## Configure Log Retention

Grafana Loki is configured with a default retention period of 12 months for it's logs. This means that Grafana can query data up to 12 months old. Once the 12 months is reached, Loki will remove older logs.

If a different retention period is required then this can be set, however, it should only be set to the period that is needed otherwise excessive disk space may be used unnecessarily.

To change the retention period:

1. Open the `loki-local-config.yaml` configuration file, which is located in the folder that Loki was installed to eg `C:\ProgramData\Cortex\Observability\Loki`.
1. Locate the `retention_period:` configuration value at approximately line 55.
1. Set the value of the retention required in hours, e.g. 6 months would be `4380h` or 9 months would be `6570h`.
1. Save the file.

### Re-Start the Grafana Loki Service

1. Open `services.msc`.
1. Locate the `Loki` service.
1. Right click on the service name and select `Restart`. If the service is not already running, select `Start`.

## Next Steps?

1. [Install Grafana Alloy][]

[Token Generator]:  {{< url path="IT-Tools.TokenGenerator" >}}
[Application Request Routing 3.0]: {{< url path="IIS.Downloads.ApplicationRequestRouting-3_0" >}}
[Install Grafana Alloy]: {{< url path="Cortex.GettingStarted.OnPremise.AddObservabilityToInnovation.Grafana.InstallAlloy.MainDoc" >}}
[Installing Grafana Alloy]: {{< url path="Cortex.GettingStarted.OnPremise.AddObservabilityToInnovation.Grafana.InstallAlloy.InstallAlloy.MainDoc" >}}
[prerequisites]: {{< url path="Cortex.GettingStarted.OnPremise.AddObservabilityToInnovation.Grafana.WebAppCertificateRequirements" >}}
[Software Requirements]: {{< url path="Cortex.GettingStarted.OnPremise.AddObservabilityToInnovation.Grafana.SoftwareRequirements" >}}
[URL Rewrite module 2.1]: {{< url path="IIS.Downloads.UrlRewrite-2_1" >}}
